package com.eatc.model;

public enum BookingStatus {
}
