package com.eatc.model;

public enum LessonDay {
    SATURDAY,
    SUNDAY
}
