package com.eatc.model;

public enum TimeSlot {
    MORNING,
    AFTERNOON
}
